--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,197 @@
   margin: 0;
   padding: 0;
 }
+
+.grid-container {
+  margin: 0 5px;
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: auto;
+  gap: 10px 10px;
+  grid-template-areas: "header header header" "sign-up sign-up sign-up" "main main main" "footer footer footer";
+}
+
+#header {
+  grid-area: header;
+  position: fixed;
+  top: auto;
+  width: 100%;
+  background-color: white;
+}
+
+#header img {
+  width: 50px;
+  margin: 10px;
+}
+
+#header .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #003865;
+  font-size: 1.5rem;
+}
+
+#header .header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+ul li {
+  list-style: none;
+  padding: 5px;
+}
+
+ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+ul li a:hover {
+  color: #003865;
+}
+
+#sign-up {
+  grid-area: sign-up;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 5px;
+}
+
+#title {
+  font-size: 2rem;
+  margin: 10px;
+}
+
+input[type="submit"] {
+  max-width: 150px;
+  width: 100%;
+  height: 30px;
+  margin: 15px 0;
+  border: 0;
+  background-color: #652500;
+  color: white;
+}
+
+#email {
+  max-width: 275px;
+  width: 100%;
+  padding: 5px;
+}
+
+#main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+}
+
+#product-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px 50px;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-container .icon {
+  margin-right: 20px;
+  color: #655800;
+}
+
+.info-container .discrip {
+  margin: 10px;
+}
+
+.info-container .discrip h2 {
+  font-size: 2rem;
+}
+
+.info-container .discrip p {
+  font-size: 1.2rem;
+}
+
+#media {
+  margin: 30px auto;
+}
+
+#pricing * {
+  margin: 0px 0px 20px;
+}
+
+#pricing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#pricing .price-container {
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-content: space-between;
+  text-align: center;
+  width: 360px;
+  border: 1px solid black;
+}
+
+#pricing .price-container #sonic-type {
+  width: 100%;
+  background-color: lightgray;
+  font-size: 1.2rem;
+  font-weight: 540;
+  text-transform: uppercase;
+  padding: 15px;
+}
+
+#pricing .price-container #price {
+  font-size: 1.5rem;
+}
+
+#pricing .price-container p {
+  font-size: 0.9rem;
+}
+
+#pricing .price-container #button-container input {
+  padding: 10px 20px;
+  margin-bottom: 0px;
+  border: 0;
+  text-transform: uppercase;
+  background-color: #652500;
+  color: white;
+}
+
+#footer {
+  grid-area: footer;
+  background-color: lightgray;
+}
+
+#footer-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 10px;
+}
+
+#footer-container ul li {
+  list-style: none;
+  display: inline-block;
+  margin: auto 5px;
+}
