--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,4 +1,3 @@
-
 #footer {
   grid-area: footer;
   background-color: lightgray;
@@ -8,10 +7,23 @@
     justify-content: space-between;
     padding: 2px 10px;
 
-    ul li{
-      list-style: none;
-      display: inline-block;
-      margin: auto 5px;
+    ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      margin-right: 10px;
+      li {
+        list-style: none;
+        padding: 5px;
+        a {
+          text-decoration: none;
+          color: black;
+
+          &:hover {
+            color: $primary-color;
+          }
+        }
+      }
     }
   }
 }
