--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -23,20 +23,21 @@
     justify-content: space-between;
     align-items: center;
   }
-}
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-right: 10px;
+    li {
+      list-style: none;
+      padding: 5px;
+      a {
+        text-decoration: none;
+        color: black;
 
-ul {
-  display: flex;
-  justify-content: space-around;
-  li {
-    list-style: none;
-    padding: 5px;
-    a {
-      text-decoration: none;
-      color: black;
-
-      &:hover {
-        color: $primary-color;
+        &:hover {
+          color: $primary-color;
+        }
       }
     }
   }
@@ -44,7 +45,7 @@ ul {
 
 #sign-up {
   grid-area: sign-up;
-  margin-top: 50px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,6 +67,10 @@ input[type="submit"] {
   border: 0;
   background-color: $secondary-color;
   color: white;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 #email {
