--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10px 50px;
+  margin: 0 auto;
+  padding: 0px 20px;
 }
 
 .info-container {
@@ -35,6 +36,10 @@
 
 #media {
   margin: 30px auto;
+}
+
+iframe{
+  width: 480px;
 }
 
 #pricing * {
@@ -76,6 +81,10 @@
         text-transform: uppercase;
         background-color: $secondary-color;
         color: white;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
