--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -10,14 +10,13 @@ $tertiary-color: #655800;
 .grid-container {
   margin: 0 5px;
   display: grid;
-  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-columns: auto;
   grid-template-rows: auto;
-  gap: 10px 10px;
-  grid-template-areas: 
-  "header header header"
-  "sign-up sign-up sign-up"
-  "main main main"
-  "footer footer footer";
+  grid-template-areas:
+    "header"
+    "sign-up"
+    "main"
+    "footer";
 }
 
 @import 'header';
@@ -25,3 +24,5 @@ $tertiary-color: #655800;
 @import 'main';
 
 @import 'footer';
+
+@import 'responsive';
