--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,10 +7,9 @@
 .grid-container {
   margin: 0 5px;
   display: grid;
-  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-columns: auto;
   grid-template-rows: auto;
-  gap: 10px 10px;
-  grid-template-areas: "header header header" "sign-up sign-up sign-up" "main main main" "footer footer footer";
+  grid-template-areas: "header" "sign-up" "main" "footer";
 }
 
 #header {
@@ -40,28 +39,30 @@
   align-items: center;
 }
 
-ul {
+#header ul {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
+  margin-right: 10px;
 }
 
-ul li {
+#header ul li {
   list-style: none;
   padding: 5px;
 }
 
-ul li a {
+#header ul li a {
   text-decoration: none;
   color: black;
 }
 
-ul li a:hover {
+#header ul li a:hover {
   color: #003865;
 }
 
 #sign-up {
   grid-area: sign-up;
-  margin-top: 50px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,6 +86,10 @@ input[type="submit"] {
   color: white;
 }
 
+input[type="submit"]:hover {
+  cursor: pointer;
+}
+
 #email {
   max-width: 275px;
   width: 100%;
@@ -101,7 +106,8 @@ input[type="submit"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10px 50px;
+  margin: 0 auto;
+  padding: 0px 20px;
 }
 
 .info-container {
@@ -130,6 +136,10 @@ input[type="submit"] {
 
 #media {
   margin: 30px auto;
+}
+
+iframe {
+  width: 480px;
 }
 
 #pricing * {
@@ -181,6 +191,10 @@ input[type="submit"] {
   color: white;
 }
 
+#pricing .price-container #button-container input:hover {
+  cursor: pointer;
+}
+
 #footer {
   grid-area: footer;
   background-color: lightgray;
@@ -192,8 +206,63 @@ input[type="submit"] {
   padding: 2px 10px;
 }
 
+#footer-container ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-right: 10px;
+}
+
 #footer-container ul li {
   list-style: none;
-  display: inline-block;
-  margin: auto 5px;
+  padding: 5px;
+}
+
+#footer-container ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+#footer-container ul li a:hover {
+  color: #003865;
+}
+
+@media screen and (min-width: 768px) {
+  #header ul {
+    flex-direction: row;
+    width: 35vw;
+  }
+  #header a {
+    font-size: 1.3rem;
+  }
+  #product-info {
+    max-width: 900px;
+  }
+  .info-container .discrip {
+    margin: 10px;
+  }
+  .info-container .discrip h2 {
+    font-size: 2rem;
+  }
+  .info-container .discrip p {
+    font-size: 1.2rem;
+  }
+  iframe {
+    width: 680px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #pricing {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+  #pricing .price-container {
+    margin: 20px 10px;
+  }
+  #header a {
+    font-size: 1.5rem;
+  }
 }
